fix: field icon and icon position label alignment

--- a/assets/css/admin/form-builder.css
+++ b/assets/css/admin/form-builder.css
@@ -4244,6 +4244,11 @@ input.wpuf-tab:checked + .wpuf-tab-content,
   margin-bottom: 0.5rem;
 }
 
+.wpuf-my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .wpuf-my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -5738,10 +5743,6 @@ input.wpuf-tab:checked + .wpuf-tab-content,
 .wpuf-bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.wpuf-bg-black\/25 {
-  background-color: rgb(0 0 0 / 0.25);
 }
 
 .wpuf-bg-blue-50 {
@@ -7714,11 +7715,6 @@ button.swal2-cancel.swal2-styled.swal2-default-outline {
   background-color: rgb(240 253 244 / var(--tw-bg-opacity)) !important;
 }
 
-.hover\:wpuf-bg-amber-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 119 6 / var(--tw-bg-opacity));
-}
-
 .hover\:wpuf-bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
@@ -7988,11 +7984,6 @@ button.swal2-cancel.swal2-styled.swal2-default-outline {
 .focus\:wpuf-border-primary:focus {
   --tw-border-opacity: 1;
   border-color: rgb(5 150 105 / var(--tw-border-opacity));
-}
-
-.focus\:wpuf-bg-amber-600:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 119 6 / var(--tw-bg-opacity));
 }
 
 .focus\:wpuf-bg-emerald-700:focus {
